# askchat

./: .env.example  LICENSE  Makefile  README-ZH.md  README-en.md  README.md  pyproject.toml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  test.yml
.github/workflows/: publish.yml  test.yml
askchat/: __init__.py  ask.py  askchat.py  askenv.py  chatenv.py  chatenvs.py  cli.py
src/askchat/: __init__.py  askenv.py  cli.py  elements.py  utils.py
tests/: __init__.py  test_askchat.py  test_askenv.py  test_chatenv.py
